@@ -1,9 +1,9 @@
-#define FILEVER_INCVERSION        0,19,0,210
-#define PRODUCTVER_INCVERSION     0,19,0,210
-#define STRFILEVER_INCVERSION     "0, 19, 0, 210\0"
-#define STRPRODUCTVER_INCVERSION  "0, 19, 0, 210\0"
+#define FILEVER_INCVERSION        0,19,0,211
+#define PRODUCTVER_INCVERSION     0,19,0,211
+#define STRFILEVER_INCVERSION     "0, 19, 0, 211\0"
+#define STRPRODUCTVER_INCVERSION  "0, 19, 0, 211\0"
 #define TSVN_VERMAJOR             0
 #define TSVN_VERMINOR             19
 #define TSVN_VERMICRO             0
-#define TSVN_VERBUILD_INCVERSION  210
+#define TSVN_VERBUILD_INCVERSION  211
 
